--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 HELP.md
+src/main/resources/application.properties
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -18,6 +19,9 @@ target/
 *.iws
 *.iml
 *.ipr
+pom.xml
+
+
 
 ### NetBeans ###
 /nbproject/private/
